--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,11 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
+    
+    - name: docker
+      run: |
+        docker --version
+        docker run hello-world
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
