--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,23 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+        SCALA_VER: ["2.11", "2.12"]
+        SPARK_VER: ["3.0", "2.4", "2.3"]
+        exclude:
+          - SCALA_VER: 2.12
+            SPARK_VER: 2.3
+          - SCALA_VER: 2.11
+            SPARK_VER: 3.0
+            
+    steps:
+      - name: test
+        run: echo 'the version ${{ matrix.SPARK_VER }}'
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
