--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: test
         run: echo 'the version ${{ matrix.SPARK_VER }}'
       - name: condition
-        if: ${{ matrix.SCALA_CER == "2.12" }}
+        if: ${{ matrix.SCALA_CER == 2.12 }}
         run: echo 'scala 2.12'
   # This workflow contains a single job called "build"
   build:
