--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           echo 'scala version ${{matrix.SCALA_VER}}'
           echo ${{ matrix.SCALA_VER == '2.12' }}
           echo ${{ github.ref }}
+          echo ${{github.sha}}
       - name: condition
         if: ${{ matrix.SCALA_VER == '2.12' }}
         run: echo 'scala 2.12'
