--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           echo ${{github.sha}}
           echo ${{github.sha[-1]}}
           echo ${{github.sha[5]}}
-          echo ${{github.sha[-4:]}}
+          echo ${{github.sha[-4]}}
       - name: condition
         if: ${{ matrix.SCALA_VER == '2.12' }}
         run: echo 'scala 2.12'
