--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,14 @@ jobs:
             
     steps:
       - name: test
+        env:
+          SHA: ${{github.sha}}
         run: |
           echo 'the version ${{ matrix.SPARK_VER }}'
           echo 'scala version ${{matrix.SCALA_VER}}'
           echo ${{ matrix.SCALA_VER == '2.12' }}
           echo ${{ github.ref }}
-          echo ${{github.sha}}
-          echo ${{github.sha[-1]}}
-          echo ${{github.sha[5]}}
-          echo ${{github.sha[-4]}}
+          echo $SHA
       - name: condition
         if: ${{ matrix.SCALA_VER == '2.12' }}
         run: echo 'scala 2.12'
