--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         SCALA_VER: ["2.11", "2.12"]
         SPARK_VER: ["3.0", "2.4", "2.3"]
         exclude:
@@ -68,7 +68,7 @@ jobs:
         echo hahaah > test
         cat test
     - name: SNAP version deployment
-      if: ${{ !startsWith( github.ref, 'refs/tags/test' ) && contains( github.ref, '-RC' ) }}
+      if: ${{ startsWith( github.ref, 'refs/tags/test-' ) && contains( github.ref, '-RC' ) }}
       run: |
         CHANGE_LIST=$(echo ${{ github.ref }} | cut -d'-' -f 3)
         echo 'mvn clean deploy scala:doc -ntp -B -DskipTests -Dchangelist=$CHANGE_LIST'
