--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,4 @@ jobs:
       if: ${{ startsWith( github.ref, 'refs/tags/test-' ) && contains( github.ref, '-RC' ) }}
       run: |
         CHANGE_LIST=$(echo ${{ github.ref }} | cut -d'-' -f 3)
-        echo 'mvn clean deploy scala:doc -ntp -B -DskipTests -Dchangelist=$CHANGE_LIST'
+        echo "mvn clean deploy scala:doc -ntp -B -DskipTests -Dchangelist=$CHANGE_LIST"
