--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,62 +14,72 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        SCALA_VER: ["2.11", "2.12"]
-        SPARK_VER: ["3.0", "2.4", "2.3"]
-        exclude:
-          - SCALA_VER: 2.12
-            SPARK_VER: 2.3
-          - SCALA_VER: 2.11
-            SPARK_VER: 3.0
+  test-output:
+   name: test output
+   runs-on: ubuntu-latest
+   steps:
+     - id: step1
+       name: step ONE
+       run: "::set-output name=outKey::outValue" 
+     - id: step2
+       name: step TWO
+       run: "echo ${{ steps.step1.outputs.outKey }}"
+#   test:
+#     runs-on: ${{ matrix.os }}
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         os: [ubuntu-latest]
+#         SCALA_VER: ["2.11", "2.12"]
+#         SPARK_VER: ["3.0", "2.4", "2.3"]
+#         exclude:
+#           - SCALA_VER: 2.12
+#             SPARK_VER: 2.3
+#           - SCALA_VER: 2.11
+#             SPARK_VER: 3.0
             
-    steps:
-      - name: test
-        env:
-          SHA: ${{github.sha}}
-        run: |
-          echo 'the version ${{ matrix.SPARK_VER }}'
-          echo 'scala version ${{matrix.SCALA_VER}}'
-          echo ${{ matrix.SCALA_VER == '2.12' }}
-          echo ${{ github.ref }}
-          echo $SHA
-          gpg -h
-      - name: condition
-        if: ${{ matrix.SCALA_VER == '2.12' }}
-        run: echo 'scala 2.12'
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+#     steps:
+#       - name: test
+#         env:
+#           SHA: ${{github.sha}}
+#         run: |
+#           echo 'the version ${{ matrix.SPARK_VER }}'
+#           echo 'scala version ${{matrix.SCALA_VER}}'
+#           echo ${{ matrix.SCALA_VER == '2.12' }}
+#           echo ${{ github.ref }}
+#           echo $SHA
+#           gpg -h
+#       - name: condition
+#         if: ${{ matrix.SCALA_VER == '2.12' }}
+#         run: echo 'scala 2.12'
+#   # This workflow contains a single job called "build"
+#   build:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+#     # Steps represent a sequence of tasks that will be executed as part of the job
+#     steps:
+#     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+#     # Runs a single command using the runners shell
+#     - name: Run a one-line script
+#       run: echo Hello, world!
     
-    - name: docker
-      run: |
-        docker --version
-        docker run hello-world
+#     - name: docker
+#       run: |
+#         docker --version
+#         docker run hello-world
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-        echo hahaah > test
-        cat test
-    - name: SNAP version deployment
-      if: ${{ startsWith( github.ref, 'refs/tags/test-' ) && contains( github.ref, '-RC' ) }}
-      run: |
-        RC_VER=$(echo ${{ github.ref }} | cut -d'-' -f 3)
-        echo "mvn clean deploy scala:doc -ntp -B -DskipTests -Dchangelist=-$RC_VER"
+#     # Runs a set of commands using the runners shell
+#     - name: Run a multi-line script
+#       run: |
+#         echo Add other actions to build,
+#         echo test, and deploy your project.
+#         echo hahaah > test
+#         cat test
+#     - name: SNAP version deployment
+#       if: ${{ startsWith( github.ref, 'refs/tags/test-' ) && contains( github.ref, '-RC' ) }}
+#       run: |
+#         RC_VER=$(echo ${{ github.ref }} | cut -d'-' -f 3)
+#         echo "mvn clean deploy scala:doc -ntp -B -DskipTests -Dchangelist=-$RC_VER"
