--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,11 @@ jobs:
        name: conditional step 3
        if: ${{ env.ENV_KEY }} == "env_value"
        run: echo "step 3 condition matches"
+        
+     - id: step4
+       name: conditional step 4
+       if: ${{ env.ENV_KEY }} == "env_valueqsdfqsdf"
+       run: echo "step 4 condition matches"
 #   test:
 #     runs-on: ${{ matrix.os }}
 #     strategy:
