--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
    name: test output
    runs-on: ubuntu-latest
    steps:
+   
+     - name: Checkout
+       uses: actions/checkout@v2
      - id: step1
        name: step ONE
        run: |
