--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,9 +56,11 @@ jobs:
      - id: step5
        name: step five
        run: |
-         git diff-tree --no-commit-id --name-only -r ${{ github.sha }} > changes.txt
-         cat changes.txt
-         git log --name-only
+         echo ${github.event}
+         ${{ github.event.pull_request.base.ref }}
+         ${{ github.event.pull_request.base.sha }}
+         ${{ github.event.base_ref }}
+         ${{ github.event.before }}
 #   test:
 #     runs-on: ${{ matrix.os }}
 #     strategy:
