--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
      - id: step5
        name: step five
        run: |
-         echo ${github.event}
+         ${{github.event}}
          ${{ github.event.pull_request.base.ref }}
          ${{ github.event.pull_request.base.sha }}
          ${{ github.event.base_ref }}
