--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,11 +56,7 @@ jobs:
      - id: step5
        name: step five
        run: |
-         ${{github.event}}
-         ${{ github.event.pull_request.base.ref }}
-         ${{ github.event.pull_request.base.sha }}
-         ${{ github.event.base_ref }}
-         ${{ github.event.before }}
+         git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
 #   test:
 #     runs-on: ${{ matrix.os }}
 #     strategy:
