--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
    
      - name: Checkout
        uses: actions/checkout@v2
+       with:
+         fetch-depth: 0
      - id: step1
        name: step ONE
        run: |
