--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,16 @@ jobs:
          elif [[ ${{ github.ref }} == "refs/heads/dev" ]]; then
            echo "dev branch"
          fi  
+
+     - run: |
+         chrome --version
+         which chrome
+     
+     - uses: browser-actions/setup-chrome@latest
+
+     - run: |
+         chrome --version
+         which chrome
          
      - id: get-env
        run: echo "::set-output name=environment::prd"
